# Multiscale-Volume-Analysis

./: 2ddwt_kernel.h  BasicVolume.h  CMakeLists.txt  FileHandle.h  GeneralVolume.cpp  GeneralVolume.h  MultilevelVolume.h  README.md  VolumeProcessor.cpp  VolumeProcessor.h  angle_kernel.h  calculateLipschitz.cu  calculateLipschitz.h  calculateLipschitzCPU.cpp  copy_kernel.h  cpu_vector_helper.h  cuda_type_conversion.cpp  cuda_type_conversion.h  cutil_replacement.h  dwtForward.cu  dwtForward.h  global.cpp  global.h  kernel_vector_helper.h  lipschitz_kernel.h  maxima_kernel.h  modulusMaxima.cu  modulusMaxima.h  modulus_kernel.h  targetver.h  threshold_kernel.h  timing.h  typenaming.cpp  typenaming.h  vol.cpp  vol.sln  vol.vcxproj  vol.vcxproj.filters  volume_helpers.sln
pvm2myraw/: pvm2myraw.cpp  pvm2myraw.vcxproj  pvm2myraw.vcxproj.filters
raw_resample/: raw_resample.cpp  raw_resample.vcxproj  raw_resample.vcxproj.filters
rawdat2raw/: rawdat2raw.cpp  rawdat2raw.vcxproj  rawdat2raw.vcxproj.filters
testvol_gen/: testvol_gen.cpp  testvol_gen.vcxproj  testvol_gen.vcxproj.filters
volume_channel_combine/: volume_channel_combine.cpp  volume_channel_combine.vcxproj  volume_channel_combine.vcxproj.filters
volume_header_prepend/: volume_header_prepend.cpp  volume_header_prepend.vcxproj  volume_header_prepend.vcxproj.filters
